--- a/TopTomatoes/TopTomatoes/Base.lproj/Main.storyboard
+++ b/TopTomatoes/TopTomatoes/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="2WL-xp-2rP">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Movie List View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MovieListViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,112 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="hsv-FO-TM7">
+                                <rect key="frame" x="0.0" y="64" width="600" height="540"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="gray" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MovieTableViewCell" rowHeight="110" id="Mlv-8O-AtA" customClass="MovieTableViewCell">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Mlv-8O-AtA" id="Kqr-43-MFZ">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zaC-jU-gMB">
+                                                    <rect key="frame" x="8" y="8" width="62" height="94"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="zaC-jU-gMB" secondAttribute="height" multiplier="27:41" id="Y6K-kN-Det"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W5D-Sl-FZF">
+                                                    <rect key="frame" x="78" y="29" width="498" height="72"/>
+                                                    <string key="text">American Pie American Pie American Pie American Pie American Pie American Pie American Pie American Pie American Pie American Pie American Pie American Pie American Pie American Pie </string>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" text="American Pie" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DcP-o4-Ewq">
+                                                    <rect key="frame" x="78" y="8" width="98.5" height="19.5"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="W5D-Sl-FZF" firstAttribute="top" secondItem="DcP-o4-Ewq" secondAttribute="bottom" constant="2" id="Jr0-o9-myR"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="zaC-jU-gMB" secondAttribute="bottom" id="WoC-NJ-Wgr"/>
+                                                <constraint firstItem="W5D-Sl-FZF" firstAttribute="trailing" secondItem="Kqr-43-MFZ" secondAttribute="trailingMargin" id="WpN-7f-9t9"/>
+                                                <constraint firstItem="zaC-jU-gMB" firstAttribute="leading" secondItem="Kqr-43-MFZ" secondAttribute="leadingMargin" id="YEn-cj-01j"/>
+                                                <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="DcP-o4-Ewq" secondAttribute="trailing" id="aKW-hD-jJ3"/>
+                                                <constraint firstItem="W5D-Sl-FZF" firstAttribute="bottom" secondItem="Kqr-43-MFZ" secondAttribute="bottomMargin" id="csg-Ey-fEK"/>
+                                                <constraint firstItem="DcP-o4-Ewq" firstAttribute="leading" secondItem="zaC-jU-gMB" secondAttribute="trailing" constant="8" id="esw-cq-MwB"/>
+                                                <constraint firstItem="DcP-o4-Ewq" firstAttribute="top" secondItem="Kqr-43-MFZ" secondAttribute="topMargin" id="m02-bW-f4k"/>
+                                                <constraint firstItem="zaC-jU-gMB" firstAttribute="top" secondItem="Kqr-43-MFZ" secondAttribute="topMargin" id="qg2-ps-0UX"/>
+                                                <constraint firstItem="W5D-Sl-FZF" firstAttribute="leading" secondItem="DcP-o4-Ewq" secondAttribute="leading" id="uPO-50-tIE"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="movieDescriptionLabel" destination="W5D-Sl-FZF" id="fV3-3o-g7G"/>
+                                            <outlet property="moviePosterImageView" destination="zaC-jU-gMB" id="WAu-zL-wtC"/>
+                                            <outlet property="movieTitleLabel" destination="DcP-o4-Ewq" id="C3E-3t-IoJ"/>
+                                            <segue destination="kdh-m2-mme" kind="show" identifier="ShowMovieDetailSegue" id="Z5R-vA-o4u"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="hsv-FO-TM7" secondAttribute="trailing" constant="-16" id="6Ei-T1-4Q8"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="hsv-FO-TM7" secondAttribute="bottom" constant="-4" id="I2b-KB-jFU"/>
+                            <constraint firstItem="hsv-FO-TM7" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="kbu-92-nCs"/>
+                            <constraint firstItem="hsv-FO-TM7" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="srJ-Oh-GOO"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="l7I-Gv-E0T"/>
+                    <connections>
+                        <outlet property="movieListTableView" destination="hsv-FO-TM7" id="4Lb-ng-azA"/>
+                        <outlet property="movieListtableViewTopLayoutConstraint" destination="kbu-92-nCs" id="sos-IL-kRG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1377" y="537"/>
+        </scene>
+        <!--Movie Detail View Controller-->
+        <scene sceneID="buD-is-3FI">
+            <objects>
+                <viewController id="kdh-m2-mme" customClass="MovieDetailViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Riu-0S-YcG"/>
+                        <viewControllerLayoutGuide type="bottom" id="9d3-un-dEK"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="cpm-l3-rXV">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Fuk-pi-dlb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2130" y="618"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="vdL-u1-VSN">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="2WL-xp-2rP" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="KYO-wb-6J6">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="1d7-77-gGf"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Gnh-ln-yst" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="570" y="908"/>
         </scene>
     </scenes>
 </document>
