--- a/TopTomatoes/TopTomatoes/Base.lproj/Main.storyboard
+++ b/TopTomatoes/TopTomatoes/Base.lproj/Main.storyboard
@@ -105,9 +105,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rfw-Y8-SjL">
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rfw-Y8-SjL">
                                 <rect key="frame" x="-8" y="0.0" width="616" height="600"/>
                                 <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="0LT-Ba-rcl" appends="YES" id="Jxu-oy-hNq"/>
+                                </connections>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WJV-I7-SJS">
                                 <rect key="frame" x="-8" y="270" width="616" height="330"/>
@@ -198,9 +201,6 @@
                             <constraint firstItem="9d3-un-dEK" firstAttribute="top" secondItem="rfw-Y8-SjL" secondAttribute="bottom" id="Zgj-7I-OAt"/>
                             <constraint firstAttribute="trailingMargin" secondItem="rfw-Y8-SjL" secondAttribute="trailing" constant="-24" id="nNB-87-qhd"/>
                         </constraints>
-                        <connections>
-                            <outletCollection property="gestureRecognizers" destination="sTM-Oy-Ldx" appends="YES" id="9xu-3w-Ypu"/>
-                        </connections>
                     </view>
                     <connections>
                         <outlet property="detailsTableView" destination="Zrr-vt-eCL" id="6bV-JG-suX"/>
@@ -211,9 +211,9 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fuk-pi-dlb" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer id="sTM-Oy-Ldx">
+                <tapGestureRecognizer id="0LT-Ba-rcl">
                     <connections>
-                        <action selector="didTapToShowPoster:" destination="kdh-m2-mme" id="5OC-0n-Jjl"/>
+                        <action selector="didTapToShowPoster:" destination="kdh-m2-mme" id="hgN-En-Joh"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
