Started UITableViewController Section
Started UITableViewController Section
https://github.com/jeffreybergier/RottenTomatoesGuide/wiki/UITableViewController

--- a/RottenTomatoesObjectiveC/RottenTomatoesObjectiveC/Base.lproj/Main.storyboard
+++ b/RottenTomatoesObjectiveC/RottenTomatoesObjectiveC/Base.lproj/Main.storyboard
@@ -1,53 +1,51 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="fhs-i1-Zup">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="bbL-9z-hTn">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="5zg-rd-3KC">
+        <!--Root View Controller-->
+        <scene sceneID="JiY-wq-7nh">
             <objects>
-                <viewController id="fhs-i1-Zup" customClass="ViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="dmJ-Tk-DMO"/>
-                        <viewControllerLayoutGuide type="bottom" id="FNk-5y-dHg"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="cA9-mT-kwr">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                <tableViewController id="m1O-BH-8vj" customClass="MovieListTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="2sR-aY-4Ej">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8GP-at-gKZ">
-                                <rect key="frame" x="16" y="20" width="213" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hFB-yc-GJs">
-                                <rect key="frame" x="237" y="20" width="67" height="30"/>
-                                <state key="normal" title="Update">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="update:" destination="fhs-i1-Zup" eventType="touchUpInside" id="nBY-2i-P95"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Text from Storyboard" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jff-e3-Xu3">
-                                <rect key="frame" x="16" y="67" width="288" height="84"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
-                    <connections>
-                        <outlet property="lowerTextLabel" destination="Jff-e3-Xu3" id="RWy-z3-wiT"/>
-                        <outlet property="upperTextField" destination="8GP-at-gKZ" id="URi-9x-kDh"/>
-                        <outlet property="upperUpdateButton" destination="hFB-yc-GJs" id="2be-Yz-i7O"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Bte-cn-BOu" sceneMemberID="firstResponder"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="lj1-sY-K3v">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="lj1-sY-K3v" id="B4s-0R-UHm">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="m1O-BH-8vj" id="y0Z-Cd-xCS"/>
+                            <outlet property="delegate" destination="m1O-BH-8vj" id="iC5-wz-Jnx"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="DY8-Wd-e36"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Rz3-8u-qsi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="296" y="381"/>
+            <point key="canvasLocation" x="866" y="322"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="HJR-NH-Sxi">
+            <objects>
+                <navigationController id="bbL-9z-hTn" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="tje-6P-YEn">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="m1O-BH-8vj" kind="relationship" relationship="rootViewController" id="Zts-ic-xSv"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Caw-0g-paq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="46" y="322"/>
         </scene>
     </scenes>
 </document>
